// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button <ButtonAnchor /> renders block buttons correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<a
  class="c0"
>
  <span
    class="Text-sc-1e9atua-0"
  >
    test button
  </span>
</a>
`;

exports[`components/Button <ButtonAnchor /> renders colors correctly by variant 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<a
  class="c0"
>
  <span
    class="Text-sc-1e9atua-0"
  >
    test button
  </span>
</a>
`;
